# C_PRACTICE

./: .clangd  .gitignore  Makefile  README.md  STYLE.md  cheat-sheet  todays_goals
Examples/Functions/: power.c
Examples/bit-operations/: bit-ops-practice.c
Examples/io/: read_longest_line_and_print.c
Examples/type-conversions/: atoi.c
Exercises/: .clangd  histogram_input_length.c  histogram_word_length.c  htoi.c  input.txt  print_ASCII_values.c  print_alphabet_ASCII_values.c  scream.c  setbits.c  squeeze.c
assembly_x86_64/: hello  simple
data-structures/deque/: deque.c  deque.h  main.c  test
examples/Functions/: pattern.c
examples/cl-args/: echo-2.c
examples/control-flow/: test
examples/pointers-arrays/: sort-input  sort-input.c  sort-lines.c  strcpy
examples/structures/: array-of-structs.c  basics.c
examples/unix/: .Chapter-8-5.txt.swp  Chapter-8-5.txt  Chapter-8.txt
exercises/: invert-bits  itob.c  test
exercises/bits/: SHA-256.c  expr  is_even.c  some-experiments.c
exercises/cl-args/: csyntax.c  entab  entab.c  filetest.c  grep.c  mentab  multi-entab.c  syn-c  tail  tail.c
exercises/io-2/: app  exercise-7-7.c
exercises/pointers-arrays/: .dcl.c.swp  multi-dim-arrays.c  sort-lines.c  strcat.c
exercises/strings/: any.c  debug  squeeze.c
exercises/structures/: .ideas.swp  app  exe  (+5 more)
opengl/: Makefile  app
projects/mini-shell/: CMakeLists.txt  README.md
projects/mini-shell/src/: main.c
projects/mini-shell/src/mini-shell/: .mini-shell.c.swp  mini-shell.c  mini-shell.h
projects/mini-shell/src/tests/: myfile.txt  out.txt  test.c
(+65 files in other folders)
